--- a/fika-profiles-sync.csproj
+++ b/fika-profiles-sync.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>FikaSync</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>0.3.1</Version>
+    <Version>0.3.2</Version>
     <Authors>fanteeek</Authors>
     <Product>FikaSync</Product>
     <AssemblyName>FikaSync</AssemblyName>
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="SharpCompress" Version="0.42.1" />
     <PackageReference Include="Spectre.Console" Version="0.54.0" />
   </ItemGroup>
 
